Moved extract component to common and other refactoring